--- a/4-Function-Assignment-1.ipynb
+++ b/4-Function-Assignment-1.ipynb
@@ -146,10 +146,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subject1= 67\n",
+      "Subject2= 89\n",
+      "Subject3= 89\n",
+      "Subject4= 99\n",
+      "Subject5= 100\n",
+      "Total:  444\n",
+      "Percentage:  88.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "##Using Return\n",
+    "def percentage():\n",
+    "    Subject1=int(input(\"Subject1= \"))\n",
+    "    Subject2=int(input(\"Subject2= \"))\n",
+    "    Subject3=int(input(\"Subject3= \"))\n",
+    "    Subject4=int(input(\"Subject4= \"))\n",
+    "    Subject5=int(input(\"Subject5= \"))\n",
+    "    sum=Subject1+Subject2+Subject3+Subject4+Subject5\n",
+    "    percent=(sum/500)*100\n",
+    "    return sum,percent\n",
+    "\n",
+    "sum,percent=percentage()\n",
+    "print(\"Total: \",sum)\n",
+    "print(\"Percentage: \",percent)"
+   ]
   },
   {
    "cell_type": "code",
@@ -180,6 +209,40 @@
     "    Perimeter=height1+height2+breadth\n",
     "    print(\"Perimeter of Triangle: \",Perimeter)\n",
     "triangle()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Height: 7\n",
+      "Breadth: 8\n",
+      "Height1: 9\n",
+      "Height2: 10\n",
+      "Perimeter of Triangle:  27\n",
+      "Area of Triangle:  28.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "##Using Return\n",
+    "def triangle():\n",
+    "    height=int(input(\"Height: \"))\n",
+    "    breadth=int(input(\"Breadth: \"))\n",
+    "    Area=(height*breadth)/2\n",
+    "    height1=int(input(\"Height1: \"))\n",
+    "    height2=int(input(\"Height2: \"))\n",
+    "    Perimeter=height1+height2+breadth\n",
+    "    return Area,Perimeter\n",
+    "\n",
+    "Area,Perimeter=triangle()\n",
+    "print(\"Perimeter of Triangle: \",Perimeter)\n",
+    "print(\"Area of Triangle: \",Area)"
    ]
   },
   {
